--- a/src/main/resources/templates/admin/category/list.html
+++ b/src/main/resources/templates/admin/category/list.html
@@ -49,8 +49,8 @@
                         <button id="addToTable" class="btn btn-primary" data-toggle="modal"
                                 data-target="#modal-add-new-category">Thêm mới danh mục <i
                                 class="fas fa-plus"></i></button>
-                        <!-- <button id="btn-search" class="btn btn-primary">Tìm kiếm <i
-                                class="fas fa-search"></i></button> -->
+                        <a href="/admin/category" class="btn btn-primary">Refresh <i
+                                class="fas fa-redo-alt"></i></a>
                     </div>
                 </div>
             </div>
