--- a/src/main/resources/templates/shop/order-detail.html
+++ b/src/main/resources/templates/shop/order-detail.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <button th:if="${canReturn} == true" class="btn btn-danger red-btn return-btn" data-toggle="modal" data-target="#returnProduct">Trả Hàng</button>
-                    <button th:if="${canCancel} == true" class="btn btn-primary red-btn cancel-btn" th:data-order="${order.id}">Hủy đơn hàng</button>
+                    <button th:if="${canCancel} == true" class="btn btn-primary red-btn cancel-btn" data-toggle="modal" data-target="#cancelProduct" th:data-order="${order.id}">Hủy đơn hàng</button>
                 </div>
                 <div class="item-small">
                     <div class="order-number-wrapper">Mã đơn <span class="order-number" th:text="'#'+${order.id}"></span></div>
@@ -93,12 +93,36 @@
                             </div>
                         </div>
                         <button th:if="${canReturn} == true" class="btn btn-danger red-btn return-btn" data-toggle="modal" data-target="#returnProduct">Trả Hàng</button>
-                        <button th:if="${canCancel} == true" class="btn btn-primary red-btn cancel-btn" th:data-order="${order.id}">Hủy đơn hàng</button>
+                        <button th:if="${canCancel} == true" class="btn btn-primary red-btn cancel-btn" data-toggle="modal" data-target="#cancelProduct">Hủy đơn hàng</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+<!--    Hủy hàng-->
+    <div class="modal fade" id="cancelProduct" tabindex="-1">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cancelLabel">Bạn có chắc chắn muốn hủy đơn hàng không?</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="new-password-confirm item-row">
+                        <div class="text required-label">Lý do hủy đơn</div>
+                        <div class="password-wrapper-in">
+                            <input class="form-control" type="text" id="noteCancel"/>
+                            <div class="invalid-feedback"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn" type="button" data-dismiss="modal">Huỷ bỏ</button>
+                    <button class="btn btn-primary red-btn btn-confirm-cancel-product" th:data-order="${order.id}" type="button">Đồng ý</button>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--    Trả hàng-->
     <div class="modal fade" id="returnProduct" tabindex="-1">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -107,9 +131,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="new-password-confirm item-row">
-                        <div class="text required-label">Lý do hủy đơn</div>
+                        <div class="text required-label">Lý do trả hàng</div>
                         <div class="password-wrapper-in">
-                            <input class="form-control" type="text" id="note"/>
+                            <input class="form-control" type="text" id="noteReturn"/>
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
@@ -127,29 +151,45 @@
     <script>
         formatMoney();
 
-        $('.cancel-btn').click(function() {
+        $('.btn-confirm-cancel-product').click(function() {
+            let isValid = true;
+            let noteValue = $("#noteCancel").val();
             let orderId = $(this).data("order");
-            $.ajax({
-                url: '/api/cancel-order/'+orderId,
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                success: function(data) {
-                    toastr.success("Hủy đơn hàng thành công");
-                    $('.status').html("Đã hủy");
-                    $('.cancel-btn').remove();
-                },
-                error: function(data) {
-                    toastr.warning(data.responseJSON.message);
+            if (noteValue == "") {
+                noteInvalid = $("#noteCancel").next();
+                noteInvalid.css('display', 'block');
+                noteInvalid.html('Vui lòng nhập lý do');
+                isValid = false;
+            }
+            if(isValid) {
+                req = {
+                    note: noteValue,
                 }
-            });
+                var myJSON = JSON.stringify(req);
+                $.ajax({
+                    url: '/api/cancel-order/' + orderId,
+                    type: 'POST',
+                    data: myJSON,
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data) {
+                        toastr.success("Hủy đơn hàng thành công");
+                        $('.status').html("Đã hủy");
+                        $('.modal').modal('hide');
+                        $('.cancel-btn').remove();
+                    },
+                    error: function (data) {
+                        toastr.warning(data.responseJSON.message);
+                    }
+                })
+            }
         })
         
         $('.btn-confirm-return-product').click(function() {
         	let isValid = true;
-        	let noteValue = $("#note").val();
+        	let noteValue = $("#noteReturn").val();
             let orderId = $(this).data("order");
             if (noteValue == "") {
-                noteInvalid = $("#note").next();
+                noteInvalid = $("#noteReturn").next();
                 noteInvalid.css('display', 'block');
                 noteInvalid.html('Vui lòng nhập lý do');
                 isValid = false;
@@ -175,8 +215,7 @@
                     }
                 }); 
             }
-              
-        })
+        });
     </script>
 </th:block>
 </body>
