--- a/src/main/resources/templates/admin/promotion/list.html
+++ b/src/main/resources/templates/admin/promotion/list.html
@@ -47,6 +47,8 @@
                     <div class="mb-3">
                         <a href="/admin/promotions/create" id="addToTable" class="btn btn-primary">Thêm mới khuyến mại <i
                                 class="fas fa-plus"></i></a>
+                        <a href="/admin/promotions" class="btn btn-primary">Refresh <i
+                                class="fas fa-redo-alt"></i></a>
                     </div>
                 </div>
             </div>
