--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -46,6 +46,8 @@
 							<a href="/admin/users/create" id="addToTable"
 								class="btn btn-primary">Thêm mới tài khoản <i
 								class="fas fa-plus"></i></a>
+							<a href="/admin/users" class="btn btn-primary">Refresh <i
+									class="fas fa-redo-alt"></i></a>
 						</div>
 					</div>
 				</div>
